--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
       <h2>مشاهیر ایران</h2>
       <div class="celebrities">
         <div class="celebrity-card">
-          <img src="https://s6.uupload.ir/files/829x1159_j1hu.jpg" alt="عکس عمر خیام">
+          <img src=https://biaupload.com/do.php?imgf=org-bff7f56288ac1.jpg" alt="عکس عمر خیام">
           <h3>عمر خیام</h3>
           <p>عمر خیام، شاعر، ریاضی‌دان و اخترشناس ایرانی قرن 11 میلادی بود. رباعیات خیام به موضوعاتی مانند زندگی، فلسفه، و گذر زمان می‌پردازد. خیام در علم نجوم و ریاضیات هم دستاوردهای مهمی داشته است.</p>
         </div>
         <div class="celebrity-card">
-          <img src="https://s6.uupload.ir/files/1710530_00pw.jpg" alt="عکس ابوعلی سینا">
+          <img src=https://biaupload.com/do.php?imgf=org-252dd57f68741.jpg" alt="عکس ابوعلی سینا">
           <h3>ابوعلی سینا</h3>
           <p>ابوعلی سینا، پزشک و فیلسوف ایرانی، کتاب "قانون در طب" را نوشت که قرن‌ها منبع اصلی پزشکی بود. او در فلسفه، منطق و ریاضیات نیز نقش مهمی داشت و از بزرگ‌ترین دانشمندان تاریخ محسوب می‌شود.</p>
         </div>
         <div class="celebrity-card">
-          <img src="https://s6.uupload.ir/files/نگاره_فردوسی_(cropped_and_edited)_5fu3.jpg" alt="عکس فردوسی">
+          <img src=https://biaupload.com/do.php?imgf=org-bc85495137531.jpg" alt="عکس فردوسی">
           <h3>فردوسی</h3>
           <p>حکیم فردوسی، نویسنده شاهنامه، تاریخ ایران باستان را در قالب شعر بازگو کرده است. شاهنامه یکی از بزرگ‌ترین آثار حماسی جهان است که فرهنگ و هویت ایرانی را زنده نگه داشته است.</p>
         </div>
         <div class="celebrity-card">
-          <img src="https://s6.uupload.ir/files/عکس-نوشته-نیما-یوشیج-e1638703952593-1024x628_985t.jpg" alt="عکس نیما یوشیج">
+          <img src=https://biaupload.com/do.php?imgf=org-e2eb5d70f1ca1.jpg" alt="عکس نیما یوشیج">
           <h3>نیما یوشیج</h3>
           <p>نیما یوشیج، پدر شعر نو فارسی، سبک جدیدی در شعر ایجاد کرد که از قالب‌های سنتی فاصله داشت. او شعر را از قید و بند وزن و قافیه آزاد کرد و مسیر جدیدی در ادبیات فارسی گشود.</p>
         </div>
