--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
       <h2>مشاهیر ایران</h2>
       <div class="celebrities">
         <div class="celebrity-card">
-          <img src="https://i.postimg.cc/W4gjbBhm/829x1159.jpg" alt="829x1159">
+          <img src="https://i.postimg.cc/Pr6f2S2W/829x1159.jpg">
           <h3>عمر خیام</h3>
           <p>عمر خیام، شاعر، ریاضی‌دان و اخترشناس ایرانی قرن 11 میلادی بود. رباعیات خیام به موضوعاتی مانند زندگی، فلسفه، و گذر زمان می‌پردازد. خیام در علم نجوم و ریاضیات هم دستاوردهای مهمی داشته است.</p>
         </div>
         <div class="celebrity-card">
-          <img src="https://i.postimg.cc/KcsWw9Ym/biography-avicenna2.jpg" alt="ابوعلی سینا">
+          <img src="https://i.postimg.cc/Zn93m6H8/biography-avicenna2.jpg">
           <h3>ابوعلی سینا</h3>
           <p>ابوعلی سینا، پزشک و فیلسوف ایرانی، کتاب "قانون در طب" را نوشت که قرن‌ها منبع اصلی پزشکی بود. او در فلسفه، منطق و ریاضیات نیز نقش مهمی داشت و از بزرگ‌ترین دانشمندان تاریخ محسوب می‌شود.</p>
         </div>
         <div class="celebrity-card">
-          <img src="https://i.postimg.cc/d3tK6Dnn/Cropped-and-Edited.jpg" alt="Cropped-and-Edited">
+          <img src="https://i.postimg.cc/439Fj05r/Cropped-and-Edited.jpg">
           <h3>فردوسی</h3>
           <p>حکیم فردوسی، نویسنده شاهنامه، تاریخ ایران باستان را در قالب شعر بازگو کرده است. شاهنامه یکی از بزرگ‌ترین آثار حماسی جهان است که فرهنگ و هویت ایرانی را زنده نگه داشته است.</p>
         </div>
         <div class="celebrity-card">
-          <img src="https://i.postimg.cc/PxHHLSwg/image.jpg" alt="image">
+          <img src="https://i.postimg.cc/XqJqY9p6/image.jpg">
           <h3>نیما یوشیج</h3>
           <p>نیما یوشیج، پدر شعر نو فارسی، سبک جدیدی در شعر ایجاد کرد که از قالب‌های سنتی فاصله داشت. او شعر را از قید و بند وزن و قافیه آزاد کرد و مسیر جدیدی در ادبیات فارسی گشود.</p>
         </div>
