--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       <h2>مشاهیر ایران</h2>
       <div class="celebrities">
         <div class="celebrity-card">
-          <img src="https://i.postimg.cc/Pr6f2S2W/829x1159.jpg">
+          <img src="https://i.postimg.cc/7Z8Fw7sC/829x1159.jpg" alt="829x1159" />
+
           <h3>عمر خیام</h3>
           <p>عمر خیام، شاعر، ریاضی‌دان و اخترشناس ایرانی قرن 11 میلادی بود. رباعیات خیام به موضوعاتی مانند زندگی، فلسفه، و گذر زمان می‌پردازد. خیام در علم نجوم و ریاضیات هم دستاوردهای مهمی داشته است.</p>
         </div>
