--- a/index.html
+++ b/index.html
@@ -52,22 +52,23 @@
           <img src="https://i.postimg.cc/7Z8Fw7sC/829x1159.jpg" alt="829x1159" />
 
           <h3>عمر خیام</h3>
-          <p>عمر خیام، شاعر، ریاضی‌دان و اخترشناس ایرانی قرن 11 میلادی بود. رباعیات خیام به موضوعاتی مانند زندگی، فلسفه، و گذر زمان می‌پردازد. خیام در علم نجوم و ریاضیات هم دستاوردهای مهمی داشته است.</p>
+          <p>خیام، شاعر و فیلسوف بزرگ ایرانی قرن 11، با رباعیات خود به مسائل زندگی، مرگ و لذت‌های زودگذر پرداخته است. او علاوه بر شاعری، در علم نجوم و ریاضیات نیز دستاوردهای برجسته‌ای داشت. مهم‌ترین اثر او "رباعیات" است که در قالب اشعار کوتاه، اندیشه‌های عمیقش را بیان کرده است. خیام به انسان‌ها دعوت می‌کند تا لحظات زندگی را غنیمت شمارند و با نگرش فلسفی خود، تفکرات عمیقی درباره سرنوشت و آزادی اراده ارائه داده است. آثار علمی او مانند "میزان‌الحکمه" و "شرح مسائل هندسه" نیز از اهمیت ویژه‌ای برخوردار است. رباعیات خیام در ایران و غرب به شدت مورد تحسین قرار گرفت و تأثیر زیادی بر ادبیات فارسی و جهانیان گذاشت.
+.</p>
         </div>
         <div class="celebrity-card">
           <img src="https://i.postimg.cc/Zn93m6H8/biography-avicenna2.jpg">
           <h3>ابوعلی سینا</h3>
-          <p>ابوعلی سینا، پزشک و فیلسوف ایرانی، کتاب "قانون در طب" را نوشت که قرن‌ها منبع اصلی پزشکی بود. او در فلسفه، منطق و ریاضیات نیز نقش مهمی داشت و از بزرگ‌ترین دانشمندان تاریخ محسوب می‌شود.</p>
+          <p>ابوعلی سینا، فیلسوف، پزشک و دانشمند بزرگ ایرانی قرن 11 میلادی، یکی از تأثیرگذارترین شخصیت‌ها در تاریخ علم و فلسفه است. مهم‌ترین اثر او "قانون فی الطب" است که به‌عنوان یکی از متون برجسته پزشکی در تاریخ شناخته می‌شود و قرن‌ها در دانشگاه‌های اروپا تدریس می‌شد. همچنین "کتاب شفا" که در آن به مسائل فلسفی، طبیعیات و متافیزیک پرداخته، از آثار برجسته اوست. ابوعلی سینا در پزشکی، شیمی، ریاضیات و نجوم نیز دستاوردهای زیادی داشت. او تأثیر زیادی بر علوم مختلف در دنیای اسلام و غرب گذاشت. علاوه بر این، فلسفه او به‌ویژه در زمینه‌های اثبات وجود خدا و تحلیل مسائل روان‌شناسی، همچنان مورد توجه است. آثارش نه تنها در دنیای اسلامی، بلکه در سراسر جهان مورد مطالعه و بررسی قرار گرفته است..</p>
         </div>
         <div class="celebrity-card">
           <img src="https://i.postimg.cc/439Fj05r/Cropped-and-Edited.jpg">
           <h3>فردوسی</h3>
-          <p>حکیم فردوسی، نویسنده شاهنامه، تاریخ ایران باستان را در قالب شعر بازگو کرده است. شاهنامه یکی از بزرگ‌ترین آثار حماسی جهان است که فرهنگ و هویت ایرانی را زنده نگه داشته است.</p>
+          <p>فردوسی، شاعر بزرگ ایرانی قرن 10 میلادی، با اثر جاودان خود "شاهنامه" به تاریخ و فرهنگ ایران شکل جدیدی بخشید. او در شاهنامه داستان‌های حماسی و اساطیری ایران را به نظم درآورد و آن را به عنوان اثری عظیم در ادبیات فارسی به یادگار گذاشت. فردوسی با سرودن این اثر بزرگ، زبان فارسی را از نابودی در برابر زبان‌های بیگانه حفظ کرد و در حقیقت نقش مهمی در احیای هویت فرهنگی ایران داشت. شاهنامه علاوه بر داستان‌های حماسی، آموزه‌های اخلاقی و انسانی نیز به همراه دارد. فردوسی در سراسر زندگی‌اش با فقر و مشکلات زیادی مواجه بود، اما همواره به وطن و زبان فارسی وفادار ماند و در نهایت، شاهنامه را به اثری جهانی تبدیل کرد. آثار فردوسی نه تنها در ایران بلکه در سراسر جهان تأثیرگذار است و او به‌عنوان نماد افتخار و فرهنگ ایرانی شناخته می‌شود. .</p>
         </div>
         <div class="celebrity-card">
           <img src="https://i.postimg.cc/XqJqY9p6/image.jpg">
           <h3>نیما یوشیج</h3>
-          <p>نیما یوشیج، پدر شعر نو فارسی، سبک جدیدی در شعر ایجاد کرد که از قالب‌های سنتی فاصله داشت. او شعر را از قید و بند وزن و قافیه آزاد کرد و مسیر جدیدی در ادبیات فارسی گشود.</p>
+          <p>یوشیج، شاعر معاصر ایرانی و بنیان‌گذار شعر نو در ایران، در قرن 20 میلادی به دنیا آمد. او با آثار خود به شعر فارسی شکلی نو بخشید و با کنار گذاشتن قالب‌های کلاسیک، شعرهایی با زبان ساده و صمیمی خلق کرد که به مسائل اجتماعی و انسانی پرداخته‌اند. مهم‌ترین اثر او "قاصدک" است که نشان‌دهنده تغییرات در فضای ادبی ایران آن زمان بود. یوشیج به‌ویژه در به‌کارگیری موسیقی کلام و آزادسازی وزن شعر توانست تحولی در ادبیات فارسی ایجاد کند. او همچنین از طبیعت و زندگی روزمره الهام می‌گرفت و با زبان نو و تصویرپردازی‌های بدیع، مفاهیم عمیق را به خوانندگان انتقال می‌داد. تاثیرات شعر یوشیج باعث شد که او به‌عنوان یکی از پیشگامان شعر نو در ادبیات فارسی شناخته شود. .</p>
         </div>
       </div>
     </section>
