--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@
         </div>
       </div>
     </section>
+    <p style="text-align: center; font-size: 18px; font-weight: bold;">
+    در ویدئو زیر برخی مشاهیر و مسافر دیگر را مشاهده می‌کنیم
+</p>
 
+<video controls width="100%">
+    <source src="https://uploadkon.ir/uploads/d9cc02_25InShot-20250202-151553673.mp4" type="video/mp4">
+    مرورگر شما از این ویدیو پشتیبانی نمی‌کند.
+</video>
     <section id="designer">
       <h2>درباره طراح</h2>
       <p>این وب‌سایت توسط <strong>مهدیس جهانگیری</strong>، دانش‌آموز دبیرستان استعدادهای درخشان فرزانگان ۲ کرج طراحی شده است. هدف از این وب‌سایت، معرفی مشاهیر ایران و نمایش آثار فرهنگی و هنری آن‌هاست.</p>
