--- a/index.html
+++ b/index.html
@@ -89,3 +89,84 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>نظرسنجی جشنواره فرهنگی هنری</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            direction: rtl;
+            text-align: center;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #2c3e50;
+        }
+        .option {
+            display: block;
+            margin: 10px 0;
+        }
+        button {
+            background-color: #27ae60;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #219150;
+        }
+        .result {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <h2>آیا از مطالب سایت راضی بودید؟</h2>
+    <form id="surveyForm">
+        <label class="option">
+            <input type="radio" name="satisfaction" value="بله"> بله
+        </label>
+        <label class="option">
+            <input type="radio" name="satisfaction" value="خیر"> خیر
+        </label>
+        <label class="option">
+            <input type="radio" name="satisfaction" value="نظرات دیگری دارم"> نظرات دیگری دارم
+        </label>
+        <button type="button" onclick="submitSurvey()">ارسال</button>
+    </form>
+
+    <div class="result">
+        <h3>نتیجه نظر شما:</h3>
+        <p id="resultText">لطفاً یکی از گزینه‌ها را انتخاب کنید.</p>
+    </div>
+</div>
+
+<script>
+    function submitSurvey() {
+        let selectedOption = document.querySelector('input[name="satisfaction"]:checked');
+        if (selectedOption) {
+            let resultText = document.getElementById("resultText");
+            resultText.innerHTML = "شما پاسخ داده‌اید: <strong>" + selectedOption.value + "</strong>";
+        } else {
+            alert("لطفاً یک گزینه را انتخاب کنید.");
+        }
+    }
+</script>
+
+</body>
+</html>
