--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </section>
     <p style="text-align: center; font-size: 18px; font-weight: bold;">
-    .در ویدئو زیر برخی مشاهیر و مفاخر دیگر را مشاهده می‌کنیم
+     در ویدئو زیر برخی مشاهیر و مفاخر دیگر را مشاهده می‌کنیم
 </p>
 
 <video controls width="100%">
